# bison-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pdm_build.py  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: _build_wheel.yaml  build.yaml  release.yaml  wheels.yml
src/bison_bin/: __init__.py  _version.py  _wrapper.py  runtime.py
